Added basic Json, CSV supports, Added UniversalByteObj